      Patch by Alex Mestiashvili <mailatgoogl@gmail.com>
    - fix crash when --rename is passed  (Closes: #812417)
    - when scanning for directories called 'debian', ignore the ones that
      don't have a file called 'watch'. This removes several annoying warnings
      when uscan is run on a package that has several directories called
      'debian' in its upstream source.
  * mk-build-deps:
    - When installing, pass `-o Debug::pkgProblemResolver=yes` to `apt-get
      install` so that when build dependencies can't be satisfied, you know why.
      Otherwise it would just tell you that the *-build-deps package needs to
      be removed and you will never know why.
  * debian/control:
    - change Vcs-Git: to a https:// URL

  [ James McCoy ]
  * checkbashisms:
    + Recognize dash as a valid shell.
    + Check scripts which use “#!/path/to/env $interpreter”
  * debian/tests/control: Add gcc as a dependency for dpkg-architecture.
  * chdist:
    + Symlink, rather than copy, the archive keyrings into the chdist tree so
      they don't get stale.  (Closes: #783497)
  * test_package_lifecycle: Ignore listing of dh_* commands in debuild output.
    The specific commands aren't interesting, so much as the steps that the
    build goes through.  Fixes FTBFS due to new dh_update_autotools_config
    command.  (Closes: #812661)
  * dd-list:
    + Use apt interfaces to find sources files and extract their contents,
      instead of globbing and directly reading files.

  [ Christoph Berg ]
  * debcheckout: Add auth mapping for https://github.com.

  [ Osamu Aoki ]
  * uscan:
    - Fix regressions and glitches in the prioritizing mechanism of packages.
      (Closes: #809604)
    - Fix regressions of the verbosety. (Closes: #809541, #809554)
    - Keep the original compressed file when decompressing it for the
      signature verification. (Closes: #812860)

  [ Dominique Dumont ]
  * licensecheck:
    + detect LGPL license in Perl files handled by Dist::Zilla
